[project]
name = "supportbank"
version = "0.1.0"
description = ""
authors = [
    {name = "Bill Haigh",email = "bill.haigh@softwire.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = ">=2.0.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "main:Test"
List_All = "main:List_All"
